--- a/wordpress/wp-content/themes/ben-lido2/interactive/src/styles/_product-tile.scss
+++ b/wordpress/wp-content/themes/ben-lido2/interactive/src/styles/_product-tile.scss
@@ -82,7 +82,6 @@
     }
 
     .fal {
-      margin-left: 4px;
       font-size: 14px;
     }
 
